<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Clone</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="twitter_handle">Twitter Handle</string>
    <string name="tweet_content">Tweet Content</string>
    <string name="time_stamp">time_stamp</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="user_name">User Name</string>
    <string name="favorite_count">100</string>
    <string name="tweetTitle">Tweet</string>
    <string name="retweets">Retweets</string>
    <string name="likes">Likes</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="cancel_button">Cancel</string>
    <string name="compose_tweet">Tweet</string>
    <string name="replyTo">Replying to</string>
    <string name="replyToUserHandle">ChrisEvans</string>
    <string name="reply_hint">Tweet your reply</string>
</resources>