<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="15dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:text="@string/user_name"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTwitterHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/twitter_handle"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_stamp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvTwitterHandle"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTweetContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/tweet_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@null"
        android:autoLink="all"
        android:textColorLink="#1DA1F2"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTwitterHandle" />

</androidx.constraintlayout.widget.ConstraintLayout>