<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="15dp"
        tools:context=".TweetDetails">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/profile_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/user_name"
            app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTwitterHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/twitter_handle"
            app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
            app:layout_constraintTop_toBottomOf="@id/tvName" />


        <TextView
            android:id="@+id/tvTweetContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/tweet_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:autoLink="all"
            android:textColorLink="#1DA1F2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_stamp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTweetContent" />



        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvTimestamp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/favorite_count"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            />

        <TextView
            android:id="@+id/tvRetweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.5dp"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:text="@string/retweets"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/tvRetweetCount"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            />

        <TextView
            android:id="@+id/tvFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4.5dp"
            android:text="@string/favorite_count"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvRetweets"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.5dp"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:text="@string/likes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/tvFavoriteCount"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            layout="@layout/toolbar_tweet"
            android:id="@+id/toolbarTweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

