<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeActivity">

    <ImageView
        android:id="@+id/ivUserProfileImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        tools:srcCompat="@tools:sample/avatars" />
    <View
        android:id="@+id/vLine"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintStart_toStartOf="@id/ivUserProfileImage"
        android:layout_marginLeft="17.5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvReplyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replyTo"
        app:layout_constraintStart_toStartOf="@id/tweet_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"/>

    <TextView
        android:id="@+id/tvRepliedToUserHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replyToUserHandle"
        app:layout_constraintStart_toEndOf="@id/tvReplyTo"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        android:layout_marginLeft="4dp"
        android:textColor="@color/primary_color"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tweet_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="250"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivUserProfileImage"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        app:counterTextAppearance="@style/counterText"
        android:theme="@style/TextInputLayout"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp">
        <EditText
            android:inputType="textMultiLine"
            android:id="@+id/etComposeTweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:gravity="start|top"
            android:hint="@string/reply_hint"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="64dp"
        app:fabCustomSize="96dp">

        <include
            layout="@layout/toolbar_compose"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>



</androidx.constraintlayout.widget.ConstraintLayout>